Kubernetes/tests/gateways/istio-gateway-test/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
  namespace: argocd 
spec:
  hosts:
  - "argo.creative.opik.net"
  gateways:
  - istio-system/kubevision-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
