Kubernetes/tests/gateways/istio-gateway-test/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubevision-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*/creative.opik.net"
    - "*/*.creative.opik.net"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: creative-tls-secret
    hosts:
    - "*/creative.opik.net" 
    - "*/*.creative.opik.net"
